debian: depend on new packages libmtd-dev libubi-dev

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,8 @@ Build-Depends: debhelper (>= 12),
                libarchive-dev,
                liblua5.2-dev,
                libjson-c-dev,
+               libmtd-dev,
+               libubi-dev,
                libssl-dev,
                libzmq3-dev,
                libz-dev,
