debian: depend on libcmocka-dev

--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,10 @@ Build-Depends: debhelper (>= 12),
                liblua5.2-dev,
                libjson-c-dev,
                libmtd-dev,
+               libcmocka-dev,
                libubi-dev,
                libssl-dev,
+               libsystemd-dev,
                libzmq3-dev,
                libz-dev,
                pkg-config,
