--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 override_dh_auto_configure:
 ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
-	$(MAKE) debian_defconfig
+	$(MAKE) televic_defconfig
 endif
 
 override_dh_auto_build-indep:
